fix html layout issues

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,6 +8,23 @@ h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
 
+pre {
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	overflow: auto;
+    overflow-x: scroll;
+	overflow-y: hidden;
+	font-size: 12px;
+	line-height: 20px;
+	background: #efefef;
+	border: 1px solid #777;
+	background: url(lines.png) repeat 0 0;
+}
+pre code {
+	padding: 10px;
+	color: #333;
+}
 ul {
   margin: 0;
 }
@@ -56,14 +73,21 @@ a.article-title:hover {
 }
 
 .article-metadata {
-  padding-bottom: 1px;
-  margin-bottom: 4px;
-  border-bottom: 1px solid #e3e3e3
+  /*padding-bottom: 1px;*/
+  /*margin-bottom: 4px;*/
+  /*border-bottom: 1px solid #e3e3e3*/
 }
 
 .article-metadata a:hover {
   color: #333;
   text-decoration: none;
+}
+
+.article-header {
+    display: flex;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .article-svg {
